[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "chainql"
requires-python = ">=3.10"
classifiers = []
dynamic = ["version"]
dependencies = ["patchelf; platform_system == 'Linux'"]

[project.urls]
Homepage = "https://github.com/UniqueNetwork/pychainql"

[tool.maturin]
python-source = "stubs"
features = ["pyo3/extension-module"]
